# lxRbckl

./: .gitignore  .npmignore  1047.py  C  README.md  Raspberry  about.json  demo.md  feed.json  here.md  index.d.ts  index.js  index.ts  local.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  subjectFormat.md  test.json  tsconfig.json  tsup.config.ts
C#/: README.md
C++/: README.md
C-Sharp/: README.md
CS/: README.md
CSS/: README.md
Clojure/: README.md
Docker/: README.md  docker
Excel/: README.md
Git/: README.md  git
GitHub/: README.md  github
Gunicorn/: README.md
JavaScript/: @octokit  README.md  crypto  discord  node  openai
Linux/: README.md
Mac-OS/: README.md
MacOS/: README.md
Node.js/: README.md
Portfolio/: README.md
Python/: README.md  discord  openai  selenium  torch
Raspberry Pi/: README.md
Raspberry-Pi/: README.md
Regex/: README.md
Shell/: README.md  chromium
TypeScript/: @octokit  README.md  discord  node  openai
format/: subject.md
leetcode/: 1.py  1047.py  17.py  231.py  268.py  292.py  3.py  34.py  4.py  46.py  48.py  9.py
lxRbckl/: README.md  __init__.py
lxRbcklPyPi/: LICENSE.txt  __init__.py  setup.py
lxrbckl/: __init__.py  gpt.py  local.py  local_test.py  openai.py  remote.py  screen.py
markdown/: pygithubProblem.md
markdownFormats/: projectAbout.md  projectReadme  projectReadme.md  projectUsage.md  projectWiki.md  subject.md  topic.md  wikiAbout.md  wikiUsage.md
module/: mGithub.py  mJSON.py  mRequests.py
source/: chatgpt.js  gpt.js  local.js  local.py  remote.js
(+114 files in other folders)
