[tool.poetry]
name = "lxrbckl"
version = "1.0.1"
description = "CRUD tools for local and remote files, enhancing readability and abstraction in lxRbckl projects."
authors = ["lxRbckl <lxrbckl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.2"
requests = "^2.31.0"
pygithub = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
