[tool.poetry]
name = "lxrbckl"
version = "2.3.0"
readme = "README.md"
authors = ["lxRbckl <lxrbckl@gmail.com>"]
homepage = "https://github.com/lxRbckl/lxRbckl/tree/python"
description = "CRUD tools for local and remote files, enhancing readability and abstraction in lxRbckl projects."

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.2"
requests = "^2.31.0"
pygithub = "^2.1.1"
pyautogui = "^0.9.54"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
